# clang-suite

./: .gitignore  CMakeLists.txt  crt_postinstall.xml.cmake.in  detect_crt_path.sh  pack.cmake  packages.cmake  targets.cmake
compiler-rt/: CMakeLists.txt  chkstk.S
compiler-rt/sanitizers/: CMakeLists.txt
csu/: CMakeLists.txt  crtbegin.c  crtend.c
installbuilder/: MD5-LICENSE.txt  project.xml.cmake.in
libcxx/: CMakeLists.txt
libcxxrt/: CMakeLists.txt
libunwind/: CMakeLists.txt  config.cmake  config.h.cmake.in
openmp-llvm/: CMakeLists.txt
patches/psclang/: 0001-Driver-Disable-OpenSUSE-rules-for-SLES10.patch  0002-Driver-Link-C-to-lcxxrt-leh.patch  0003-Driver-Disarm-GCC-installation-detector.patch  0004-Driver-Check-clang-runtime-dirs-when-looking-for-obj.patch  0005-Driver-Always-add-L-paths-for-clang-runtime-director.patch  0006-Driver-Add-rpaths-for-internal-libdirs.patch  0007-CodeGen-Disable-ctor-COMDATs-on-Solaris.patch  0008-Driver-Do-not-pass-values-Xa.o-on-Solaris.patch  0009-Driver-Enable-compiler-rt-support-on-Solaris.patch  0010-Driver-Copy-libc-header-support-to-Solaris.patch  0011-Driver-Support-overriding-linker-via-LDEXEC.patch  0011-Support-overriding-linker-via-LDEXEC.patch  0012-Driver-Set-default-linker-on-Solaris-to-usr-bin-ld-t.patch  0012-Set-default-linker-on-Solaris-to-usr-bin-ld-to-skip-.patch  0013-Driver-Make-static-construct-semi-static-libs-using-.patch  0014-Driver-Pass-leh-for-sanitizer.patch
patches/psllvm/: 0001-Fix-wrapped-loop-iterator-in-PromoteMem2Reg.patch  0002-ADT-APFloatBase-Prevent-collapsing-semPPCDoubleDoubl.patch  0002-Orc-Fix-templates-for-Solaris.patch  0002-Support-Provide-linux-magic.h-fallback-for-older-ker.patch  0002-Support-Use-O_CLOEXEC-only-when-declared.patch
psllvm/: CMakeLists.txt
